[workspace.package]
authors = ["Avandar2024 and Aromatic05"]
edition = "2024"

[workspace]
members = [
    "src-tauri",
    "field_macro",
    "webdav",
]
resolver = "3"

[profile.release]
lto = true

# 公共依赖定义
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }
ts-rs = "10.1.0"
log = "0.4.27"
anyhow = "1.0.98"
# 可以添加其他 field_macro 可能使用的共享依赖
