[package]
name = "todolists"
version = "0.1.0"
description = "A simple todo list app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "todolists_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-std = { version = "1.13.1", features = ["attributes"] }
redb = "2.4.0"
tauri-plugin-updater = "2.7.0"
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["macros"] }
dirs = "6.0.0"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["json"] }
log = "0.4.27"
toml = { version = "0.8.20", features = ["parse"] }
rand = "0.9.1"
ts-rs = "10.1.0"
once_cell = "1.21.3"
tempfile = "3.19.1"
