[package]
name = "ToDoPulse"
version = "0.1.0"
description = "A simple todo list app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "to_do_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "test", "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
async-std = { version = "1.13.1", features = ["attributes"] }
redb = "2.4.0"
tauri-plugin-updater = "2.7.0"
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.21.7"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest_dav = "0.2.1"
httpdate = "1.0"
log = { workspace = true }
toml = { version = "0.8.20", features = ["parse"] }
rand = "0.9.1"
ts-rs = { workspace = true }
once_cell = "1.21.3"
tauri-runtime = "2.6.0"
ics = "0.5"
tauri-plugin-dialog = "2"
futures = "0.3.31"
env_logger = "0.11.8"
cron = "0.15.0"
notify-rust = "4.11.7"
async-trait = "0.1.88"
openssl = { version = "*", features = ["vendored"], optional = true }
tauri-plugin-fs = "2"
parking_lot = "0.12.3"
field_macro = { path = "./src/utils/field_macro", version = "0.1.0" } # 不需要修改路径引用

[dev-dependencies]
tempfile = "3.19.1"
mockall = "0.13.1"

[features]
# 默认不启用 OpenSSL
default = []
mobile = ["dep:openssl"]
