[package]
name = "webdav"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
reqwest_dav = "0.2.1"
serde.workspace = true
serde_json.workspace = true
tokio = "1.46.1"
urlencoding = "2.1.3"
uuid.workspace = true
field_macro ={ path = "../src-tauri/src/utils/field_macro"}
ts-rs.workspace = true
path-clean = "1.0.1"
async-recursion = "1.1.1"
parking_lot = "0.12.4"
once_cell = "1.21.3"
paste = "1.0.15"
